2006-03-21  Miguel de Icaza  <miguel@novell.com>

	* Stream.cs: In 2.0 make Close call Dispose(true).

2006-03-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FileStream.cs: Seek() should flush the buffer, if any. Fixes bug
	#77863.

2006-03-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Stream.cs: Add 2.0 members to Stream.cs (CanTimeout,
	ReadTimeout and WriteTimeout).
	
2006-02-27  Gert Driesen  <drieseng@users.sourceforge.net>

	* File.cs: In 2.0 profile, File.Get****Time(Utc) should not throw
	IOException if specified path does not exist. Fixes bug #77641.

2006-02-26  Gert Driesen  <drieseng@users.sourceforge.net>

	* FileStream.cs: To match MSFT, ignore FileShare.Inheritable on 2.0
	profile. This fixes bug #77644. Improved usefulness of some existing
	exception messages.

2006-02-22  Joerg Rosenkranz <joergr@voelcker.com>

	* MonoIO.cs, MonoIOError.cs: Verbose exception for error 39 
	  (disk full).
	  
2006-02-03  Zoltan Varga  <vargaz@gmail.com>

	* Stream.cs FileStream.cs: Add new 2.0 Dispose () method and protected
	Dispose (bool) method.

2006-01-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TextWriter.cs: Dispose () is public in 2.0.

2006-01-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UnexceptionalStreamReader.cs: Read (char,int,int) should not
	return -1. Thanks to Jakob Berkman.

2006-01-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StreamReader.cs: (ReadToEnd) if Read returns -1 or 0, we're done.

2006-01-18  Atsushi Enomoto  <atsushi@ximian.com>

	* Path.cs : (GetRandomFileName) use random buffer ;-) It somehow
	  caused infinite loop on Windows.

2006-01-18  Atsushi Enomoto  <atsushi@ximian.com>

	* DirectoryInfo.cs : on Windows top directory is something like c:\.

2006-01-17  Joshua Tauberer  <tauberer@for.net>

	* StreamReader.cs: Avoid two totally unnecessary string creations.
	  (kind of pedantic)

2006-01-13  Ben Maurer  <bmaurer@andrew.cmu.edu>
