@@ -1,0 +1,56 @@
+//------------------------------------------------------------------------------
+// 
+// System.IO.FileOptions.cs 
+//
+// Author:         Zoltan Varga (vargaz@gmail.com)
+//
+//------------------------------------------------------------------------------
+
+//
+// Copyright (C) 2004 Novell, Inc (http://www.novell.com)
+//
+// Permission is hereby granted, free of charge, to any person obtaining
+// a copy of this software and associated documentation files (the
+// "Software"), to deal in the Software without restriction, including
+// without limitation the rights to use, copy, modify, merge, publish,
+// distribute, sublicense, and/or sell copies of the Software, and to
+// permit persons to whom the Software is furnished to do so, subject to
+// the following conditions:
+// 
+// The above copyright notice and this permission notice shall be
+// included in all copies or substantial portions of the Software.
+// 
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+// LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+// OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+// WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+//
+
+using System.Runtime.InteropServices;
+
+namespace System.IO
+{
+	[Flags]
+	[Serializable]
+	[ComVisible(true)]
+	[MonoTODO]
+#if NET_2_0
+	public enum FileOptions
+#else
+	internal enum FileOptions
+#endif
+	{
+		None = 0,
+		Encrypted = 0x4000,
+		DeleteOnClose = 0x4000000,
+		SequentialScan = 0x8000000,
+		RandomAccess = 0x10000000,
+		Asynchronous = 0x40000000,
+		// FIXME: This field cannot be encoded as an int in C#
+		//WriteThrough = 0x80000000
+	}
+}
+
